Revision history for App-Doh

          - Added generate and view static links
          - Excluded Markdown class from POD help listing
          - Fixed CSS bug. Editor textarea back at full width
          - Just one word. Serve the static html through Plack server
          - Changed markdown class from bash to shell .md files
          - Added support for triple grave in Markdown
          - Moved input scrubbing function to the Request object

0.2.1     2014-04-25 13:29:02
          - Bumped version for release
          - Changed install to run with notests since too much fail on CPAN
          - And we're done
          - Documentation updates
          - Debug set through environment variable
          - Search remembers query term
          - Fixed Firefox secret button styling
          - Added text searching using App::Ack
          - Renaming skins to templates
          - Moved asset directory under docs path
          - Fixed cache invalidation
          - Added make_css method to ::CLI
          - Added file upload to asset directory
          - Updated highlight.js and colour scheme
          - Fixed output from Pod::Xhtml. Indexes work
          - Navigation uses new iterator. No more hidden state
          - Rewriting docs tree walker
          - Refactored docs tree to cache and recalculate on update
          - Added XML view
          - Added Test::Warnings as a dependenct to fix P:M:LogErrors
          - Started to add create screen
          - Switched from jQuery to Mootools. Autosize textarea works
          - Made README.md a copy of Getting Started
          - Updated dependencies
          - Added app editor image to Getting_Started
          - Markdown editor autosizes textarea
          - Only code block to go on static pages
          - Updated git hooks
          - Static generator creating pages
          - Adding static generator
          - Going multilingual
          - Added markdown editor