@@ -26,6 +26,7 @@ URI               = 1.60
 Web::Simple       = 0.020
 Unexpected        = v0.22.0
 XML::Simple       = 2.18
+YAML::Tiny        = 1.62
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
