@@ -6,6 +6,7 @@ use Moo;
 use App::Doh::Markdown;
 use Class::Usul::Types qw( ArrayRef Object );
 use Scalar::Util       qw( blessed );
+use YAML::Tiny;
 
 extends q(App::Doh);
 
@@ -15,10 +16,18 @@ has 'extensions' => is => 'lazy', isa => ArrayRef,
 has 'tm'         => is => 'lazy', isa => Object, builder => sub {
    App::Doh::Markdown->new( tab_width => $_[ 0 ]->config->mdn_tab_width ) };
 
+has 'yt'         => is => 'lazy', isa => Object,
+   builder       => sub { YAML::Tiny->new };
+
 sub serialize {
    my ($self, $req, $page) = @_; my $content = $page->{content};
 
    my $markdown = blessed $content ? $content->all : $content;
+
+   my ($yaml) = $markdown =~ m{ \A --- $ ( .* ) ^ --- $ }msx;
+                $markdown =~ s{ \A --- $ ( .* ) ^ --- $ }{}msx;
+
+   $yaml and $page->{meta} = $self->yt->read_string( $yaml )->[ 0 ];
 
    return $page->{editing} ? $markdown : $self->tm->markdown( $markdown );
 }
