@@ -1,4 +1,4 @@
-[% INCLUDE default/navbar.tt -%]
+[% INCLUDE 'default/navbar.tt' -%]
    <!-- Documentation -->
 [% IF config.repo_url -%]
    <a href="[% config.repo_url %]" target="_blank"
@@ -7,8 +7,8 @@
 [% END -%]
    <div class="container-fluid fluid-height wrapper">
       <div class="row-fluid columns content">
-[% INCLUDE default/left_column.tt -%]
-[% INCLUDE default/right_column.tt -%]
+[% INCLUDE 'default/left-column.tt' -%]
+[% INCLUDE 'default/right-column.tt' -%]
       </div>
    </div>
-[% INCLUDE default/footer.tt -%]
+[% INCLUDE 'default/footer.tt' -%]
